--- a/app/views/maslulim_template.html
+++ b/app/views/maslulim_template.html
@@ -44,12 +44,13 @@ td {
 
 </style>
 <div ng-controller="MaslulimCtrl as maslulim">
-    <!-- <div class="row">
+    <div class="row">
         <div class="col-lg-12">
-            <h1 class="page-header">Maslulim Template</h1>
+        <div id="container" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
         </div>
-    </div> -->
-    Selected Maslul: {{maslulim.selectedMaslul}}
+    </div>
+
+    <div>Selected Maslul: {{maslulim.selectedMaslul}}</div>
 
     <div class="row" ng-if="maslulim.data_ready==true" ng-repeat="maslulArr in maslulim.maslulimData" >
         <div class="col-lg-12">
