--- a/app/views/maslulim_template.html
+++ b/app/views/maslulim_template.html
@@ -44,25 +44,38 @@ td {
 
 </style>
 <div ng-controller="MaslulimCtrl as maslulim">
-    <div class="row">
-        <div class="col-lg-12">
-        <div id="container" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto"></div>
-        </div>
+    <div class="col-lg-12" style="width:100%">
+    <span style="font-size: 40px;  position:relative;  background-color: blue; color:white"> {{maslulim.language.MAS_HED1}}</span>
     </div>
+    <div class="col-md-12" style="font-size: 20px; text-align: left">
+        Dear Customer,<br>
+        {{maslulim.language.MAS_HED2}}
+    </div>
+    <!-- <div  style="position:relative; clear:both;background-color: red;"> -->
+        <!-- floating show current maslul name -->
+        <div class="pull-left" style="top:17px;position:relative;clear:left;left:20%; width: 240px; height:60px;text-align:left; border: 1px solid black; outline-color: black;"> {{maslulim.language.Cus_Risk_LEV}}<br>{{maslulim.selectedMaslulName}}<br>Selected Maslul: {{maslulim.selectedMaslul}}</div>
+        <!-- buttons to increase decrease and show rank -->
 
-    <div>Selected Maslul: {{maslulim.selectedMaslul}}</div>
+        <div class="input-group pull-right">
+            <button ng-if="maslulim.updatedRank" ng-click="maslulim.reset()">Reset</button><br>
+            <button class="btn btn-default btn-circle" style="" ng-click="maslulim.Theprev()"><span class="fa fa-minus"></span></button>
+            <input class="form-control" ng-model="maslulim.rank">
+            <button class="btn btn-default btn-circle" style="" ng-click="maslulim.Thenext()"><span class="fa fa-plus"></span></button><br>
+            <span>{{maslulim.client_risk_name}}</span>
+        </div>
+        <!-- speedometer -->
+        <div id="container" class="pull-right" style="top:0px;min-width: 200px; max-width: 300px; height: 160px; margin: 0 auto">
+        </div>
+    <!-- </div> -->
 
-    <div class="row" ng-if="maslulim.data_ready==true" ng-repeat="maslulArr in maslulim.maslulimData" >
+
+    <div class="row" ng-if="maslulim.data_ready==true" ng-repeat="maslulArr in maslulim.maslulimData">
         <div class="col-lg-12">
     <div class="col-md-12">
-        <div class="input-group" ng-show="$index == 0">
-            <button class="btn btn-default btn-circle" ng-click="maslulim.Theprev()"><span class="fa fa-minus"></span></button>
-            <input class="form-control" ng-model="maslulim.rank">
-            <button class="btn btn-default btn-circle" ng-click="maslulim.Thenext()"><span class="fa fa-plus"></span></button>
-        </div>
+
         <!-- <input type="text" maxlength="3" size="2" disabled > -->
     </div>
-    <div ng-show="maslulArr.client_risk_from <= maslulim.rank && maslulArr.client_risk_to >= maslulim.rank">
+    <div ng-if="maslulArr.client_risk_from <= maslulim.rank && maslulArr.client_risk_to >= maslulim.rank">
             <table>
                 <tbody>
                     <tr style="border:none;">
@@ -129,7 +142,7 @@ td {
                     </tr>
                     <tr class="gradeX">
                         <td rowspan="6">
-                            <button class="btn btn-default col-centered" ng-model="maslulim.selectedMaslul" uib-btn-radio="maslulArr.maslul_number" ng-click="maslulim.updateMaslul()">
+                            <button class="btn btn-default col-centered" ng-init = "maslulim.client_risk_name = maslulArr.client_risk_name" ng-model="maslulim.selectedMaslul" uib-btn-radio="maslulArr.maslul_number" ng-click="maslulim.updateMaslul(maslulArr.client_risk_name, maslulim.selectedMaslul)">
                                 {{maslulArr.client_risk_name}} 
                             </button>
                             <!-- <pre>{{maslulArr | json}}</pre> -->
