--- a/app/views/questions_template.html
+++ b/app/views/questions_template.html
@@ -97,7 +97,7 @@
 			<div ng-if="q.qNumber == 0 && q.dataloaded == true" class="col-centered" style="border-style: solid;width:1000px">
 			<div class="panel panel-success" ng-repeat="v in q.q_a[q.qNumber].questions">
 			    <div class="panel-heading">
-			        <nobr><input type="checkbox" ng-model = "v.is_open" ng-click = "q.firstQ(v, $index)" style="zoom:2;vertical-align:top;" ng-true-value="true" ng-false-value="false"/><span style="font-size: 200%;vertical-align:top;">{{v.long_q_name}}</span></nobr>
+			        <nobr><input type="checkbox" ng-model = "v.is_open" ng-click = "q.firstQ(v, $index)" style="zoom:2;vertical-align:top;" ng-true-value="true" ng-false-value="false"/><span style="    white-space: normal;font-size: 1.6em;vertical-align:top;">{{v.long_q_name}}</span></nobr>
 			    </div>
 			    <div class="panel-body" ng-if="v.is_open == true">
 			        <p>{{v.long_des}}</p>
@@ -105,10 +105,10 @@
 			</div>
 		</div>
 	</div>
-	<div class="row">
+<!-- 	<div class="row">
      <pre>{{q.firstQuestion | json}}</pre>
      <pre>{{q.q_a[q.qNumber] | json}}</pre>
-	</div>
+	</div> -->
 </div>
 
 <!--  <label>Format: <span class="muted-text">(manual alternate <em class="ng-binding">M!/d!/yyyy</em>)</span></label> <select class="form-control ng-pristine ng-valid ng-touched" ng-model="format" ng-options="f for f in formats"><option value="" class=""></option><option label="dd-MMMM-yyyy" value="string:dd-MMMM-yyyy" selected="selected">dd-MMMM-yyyy</option><option label="yyyy/MM/dd" value="string:yyyy/MM/dd">yyyy/MM/dd</option><option label="dd.MM.yyyy" value="string:dd.MM.yyyy">dd.MM.yyyy</option><option label="shortDate" value="string:shortDate">shortDate</option></select> -->
